--- a/grafika/content.tex
+++ b/grafika/content.tex
@@ -152,7 +152,8 @@ Apabila ingin menggambar beberapa objek sekaligus dengan shader yang sama, kita 
 maka  objek - objek tersebut akan ditampilkan di dalam canvas.
 
 \section*{Catatan}
-seluruh kode dalam laporan ini dapat diakses pada url \url{https://github.com/chillytaka/webGL}
+seluruh kode dalam laporan ini dapat diakses pada url \url{https://github.com/chillytaka/webGL} \\
+demo untuk project ini dapat diakses pada url \url{https://chillytaka.github.io/webgl-1}
 
 
 
