--- a/jsn-cenim/main.tex
+++ b/jsn-cenim/main.tex
@@ -75,5 +75,12 @@ Depending on the data, an AI can be a cold-hearted machine predicting with no bi
 
 Based on that, there are a lots academic research and standardization in the work of standardization bodies such as ISO/IEC TR 24028, ISO/IEC TR 24027, ISO/IEC TR 24368.
 
+\section*{Evolution of Mobile and Embedded Smart Devices Technology \\ \footnotesize by Alfred Boediman, Ph. D, SRIN}
+
+From time to time, mobile and embedded device have been improve immensely. If in the past, a mobile phone is only used as a communication devices, nowadays, a mobile phone is used as an entertainment device, a camera device and many more. And now, with the rising of the machine learning, people and industry have been trying to bring ML to the phone.
+
+One of the method on bringing to the phone is by using node pruning. Node Pruning is a method to increase effectiveness by reducing the unnecessary node in a ML model. By reducing the unnecessary node, a ML model becoming more simple and manageable for a mobile phone. The same method is also happened on a child development, when we go from 1000 trillion synapses at 1 y.o, to \textit{only} 500 trillion synapses when we react adolescent period.
+
+Now, if we look over on the microcontroller side, there are a few attempts to use a deep learning method on an ARM chip. And as of now, a single ARM Cortex M3 is able to predict something with only a minute latency and using little energy.
 
 \end{document}
