--- a/jsn-cenim/main.tex
+++ b/jsn-cenim/main.tex
@@ -83,4 +83,16 @@ One of the method on bringing to the phone is by using node pruning. Node Prunin
 
 Now, if we look over on the microcontroller side, there are a few attempts to use a deep learning method on an ARM chip. And as of now, a single ARM Cortex M3 is able to predict something with only a minute latency and using little energy.
 
+So, what next ? as a leading company on mobile devices in the world, Samsung is always try to innovate, enabling devices to go far beyond a simple classification and try to give a key contributions to the AI technologies.
+
+\section*{Network Virtualization that Make Sense \\ by Winahyu Hadi Utomo, Red Hat}
+
+Nowadays, virtualization is very important for the internet in general. The so called cloud computing is mostly done by using some level of virtualization and the current most researched topics in the world is a network virtualization. There are a few advantage as to why we try to virtualize the network, such as boost productivity as we are no longer provisioning the network manually, faster application delivery with the same reason above and lastly, reduce the cost because a single network hardware can be used by many users at the same time.
+
+Eventhough virtualization is mostly a good thing, there are some takeaways on using it. Virtualization will remove some components, but also add some other components, and the virtualization need to follow the cattle concept. What does it mean by cattle concept is that every single hardware at an architecture must be easily replaceable, it can be achived by using load-balancer, multi - master operation and many more.
+
+On linux, as the leading server OS in the world, there are some attempts already made towards virtualization. For network virtualization there are OVS, Linux Bridge, Network Namespace and VLAN for Network Virtualization. For hardware virtualitation we have got KVM, Xen, Qemu, VirtualBox, and many more. And there is OpenStack to manage the compute, storage and network as a full set of Cloud OS.
+
+As people using more and more of the virtualization, there are some issues found with virtualization, one of the most severe issue is an OS overhead. An OS overhead is a bad thing as the computer or server is basically running 2 OS simultaneously, hogging unnecessary resources and eating more storage than necessary. The way to overcome this is to use containerization. With containerization we don't have to virtualize the entire OS, instead we are using the Host OS and "virtualize" on top of that.
+
 \end{document}
